--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+body{
+  background-image: linear-gradient(to right, rgb(76, 76, 184),pink,rgb(54, 54, 162));
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#form{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: large;
+  font-weight: bold;
+  position: absolute;
+  left: 35%;
+  top: 5%;
 }
-
-.App-link {
-  color: #61dafb;
+.nm1{
+  width: 200px;
+  height: 50px;
+  border-radius: 20px;
+  position: relative;
+  top: -40px;
+  left: 120px;
 }
+#nm2{
+  width: 130px;
+  height: 50px;
+  font-weight: bold;
+  font-size: large;
+  position: relative;
+  left: 120px;
+  background-color: #72be46;
+  border-radius: 20px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+#h1{
+  position: relative;
+  left: -10%;
+  top: -30px;
+}
+.box1
+{
+  width: 800px;
+  min-height: 200px;
+  border: 2px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-between;
+  position: absolute;
+  top: 20%;
+  left: 20%;
+gap: 20px;
+padding: 10px;
+background-color:white;
+}
+.bx2{
+  border: 1px solid black;
+ padding-bottom: 10px;
+  height: 50px;
+  background-color: hotpink;
+}
+.nm2
+{
+  height: 40px;
+  width: 150px;
+  position: relative;
+  margin: 50px;
+  left: 42%;
+  background-color: #72be46;
+  border-radius: 20px;
 }
