--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ background-color:white;
 }
 .bx2{
   border: 1px solid black;
+    border-radius: 20px;
  padding-bottom: 10px;
   height: 50px;
   background-color: hotpink;
